source/sass/_site.scss
/* ... */
.b-email-info {
    text-align: center;

    @include breakpoint($desktop) { margin-top: inherit; }
    @include breakpoint($mobile-only) { margin-top: 40px; }

    * { text-decoration: none; &:hover { text-decoration: none; } }

    a {
        display: inline;
        i {
            color: $gray-10;
            font-size: 64px;
            @include transition;
        }
        span {
            font-size: 18px;
            @include transition;
        }
    }

    div:first-of-type {
        margin-bottom: 15px;
    }

    &:hover {
        i {
            color: $gray-20;
            @include transition;
        }
        span {
            color: $gray-70;
            @include transition;
        }
    }
}

.e-learn-more {
    display: inline-flex;
    vertical-align: middle;
    padding: 15px;
    span {
        font-weight: 600;
    }
    & > * {
        margin-right: 8px;
    }
    &:hover {
        text-decoration: none;
        color: $gray-40;
        @include transition;
    }
    @include transition;
}

._fix-eq-mq {
    // height: unset !important; // for some reason this may not work on mobile clients :/
    height: 150px !important;
}

#wp-slider {
    background-color: $mrfp-d-blue;
    .b-slide {

        &.m-blue { background-color: $mrfp-blue; }
        &.m-d-blue { background-color: $mrfp-d-blue; }
        &.m-orange { background-color: $mrfp-orange; }
        &.m-purple { background-color: $mrfp-purple; }
        @include breakpoint(0px 550px) {
            min-height: 480px;
            padding: 20px 0;
        }
        @include breakpoint(550px 640px) {
            min-height: 440px;
            padding: 20px 0;
        }
        @include breakpoint(640px 800px) {
            min-height: 400px;
            padding: 20px 30px;
        }
        @include breakpoint(800px 1000px) {
            min-height: 380px;
            padding: 20px 40px;
        }
        @include breakpoint(1000px) {
            min-height: 320px;
            padding: 20px 80px;
        }

    }
}

.slick {
    @include breakpoint(0px 640px) {
        .slick-arrow {
            visibility: hidden;
        }
    }
    @include breakpoint(640px) {
        .slick-arrow {
            visibility: visible;
        }
    }
}

.b-copyright {
    background-color: $mrfp-d-blue-2;
    padding: 60px 0;
    & .columns > * {
        display: table;
        margin: 0 auto;
    }
    .e-cc-badge {
        float: unset;
        margin-bottom: 20px;
    }
    .e-title {
        font-size: 30px;
        font-weight: 800;
        margin-bottom: 20px;
    }
}

.b-main-menu {
    a {
        abbr {
            color: $white-70;
        }
        &:hover {
            text-decoration: none;
        }
    }
    &:not(.m-active) {
        box-shadow: none;
    }
}

.b-question-answer {
    dt {
        font-size: 20px;
        margin-bottom: 40px;
        font-weight: 400;
        cursor: pointer;
        &::after {
            font-family: Material Icons;
            margin-left: 0.2em;
            font-size: 26px;
            line-height: 0.5;
            color: $gray-10;
            content: 'textsms';
            @include transition;
        }
        &:hover::after {
            color: $gray-50;
            @include transition;
        }
        &.m-active::after {
            color: $gray-30;
        }
    }
    dd {
        display: none;
        margin-bottom: 40px;
        font-size: 18px;
        font-weight: 700;
        &.m-active {
            display: block;
        }
    }
}

#overlay {
    background-color: transparent;
}

